k8s/base/00-namespace.yaml
# ============================================================
# NAMESPACE
# Creates an isolated space called "lab" for all our services.
# Think of it like a folder that groups all our apps together.
# ============================================================
apiVersion: v1
kind: Namespace
metadata:
  name: lab
  labels:
    name: lab
    env: production
